# zenoh-nostd

./: Cargo.toml  README.md  improvement-plan.md
.github/workflows/: ci.yml
crates/zenoh-nostd/src/: api.rs  lib.rs
crates/zenoh-nostd/src/api/: mesh.rs  query.rs  response.rs  sample.rs
crates/zenoh-nostd/src/api/session/: get.rs  pub.rs  put.rs  querier.rs  queryable.rs  run.rs  sub.rs
crates/zenoh-nostd/src/io/: link.rs  transport.rs
crates/zenoh-proto/src/: logging.rs
crates/zenoh-proto/src/msgs/: exts.rs  fields.rs
crates/zenoh-proto/src/tests/: ext.rs
crates/zenoh-sansio/: Cargo.toml
crates/zenoh-sansio/proptest-regressions/tests/: transport.txt
crates/zenoh-sansio/src/: lib.rs  transport.rs
crates/zenoh-sansio/src/tests/: transport.rs
crates/zenoh-sansio/src/transport/: establishment.rs  kani_proofs.rs
crates/zenoh-sansio/tests/: tcp_peer.rs
docs/superpowers/plans/: 2026-05-07-peer-transport-mode-plan.md
docs/superpowers/specs/: 2026-05-07-peer-transport-mode-design.md
examples/: z_broker.rs  z_get.rs  z_mesh.rs  z_peer.rs  z_querier.rs
src/: lib.rs
